@@ -1,4 +1,4 @@
-## Copyright (C) 2007-2012, 2014-2020 Free Software Foundation, Inc.
+## Copyright (C) 2007-2012, 2014-2021 Free Software Foundation, Inc.
 ## Written by Keisuke Nishida, Roger While, Simon Sobisch, Edward Hart,
 ## Ron Norman
 ##
